--- a/recipe/src/App.css
+++ b/recipe/src/App.css
@@ -15,24 +15,61 @@
 }
 
 
-.homeText {
+.appText {
     font-family: 'Sacramento', cursive;
-    font-size: 20px;
+    font-size: 28px;
 }
 
-.search {
+
+
+.recipeCard{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 40%;
+    padding-top: 20px;
+    border-radius: 20px;
+    max-width: 100%;
+    height: 0%;
+	border-radius: 3px;
+	color: #000;
+    margin: 0 10px 15px;
+    position: relative;
+
+}
+
+.recipeContainer {
+    padding: 2em;
+
+}
+
+.Image {
+    display: flex;
+    position: absolute;
+    height: 220px;
+
+}
+
+.App {
+    padding: 2em;
+    height: 40px;
+    text-align: center;
+
+}
+
+
+.Title {
     font-family: 'Sacramento', cursive;
-    font-size: 25px;
-    background-color: #D5CFe1;
-    /* text-align: right; */
+    text-decoration: none;
+    text-align: center;
+    color: #000;
+    margin: 20px;
+    font-size: 24px;
+    line-height: 32px;
 }
 
-.image {
-    width: 100%;
-    height: 100%;
+.rFooter {
+    position: absolute;
+    bottom: 0;
+    text-align: center;
 }
-
-.card {
-    max-width: 350px;
-}
-
