--- a/recipe/src/App.css
+++ b/recipe/src/App.css
@@ -21,35 +21,6 @@
 }
 
 
-
-.recipeCard{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    width: 40%;
-    padding-top: 20px;
-    border-radius: 20px;
-    max-width: 100%;
-    height: 0%;
-	border-radius: 3px;
-	color: #000;
-    margin: 0 10px 15px;
-    position: relative;
-
-}
-
-.recipeContainer {
-    padding: 2em;
-
-}
-
-.Image {
-    display: flex;
-    position: absolute;
-    height: 220px;
-
-}
-
 .App {
     padding: 2em;
     height: 40px;
@@ -62,7 +33,7 @@
     font-family: 'Sacramento', cursive;
     text-decoration: none;
     text-align: center;
-    color: #000;
+    color: black;
     margin: 20px;
     font-size: 24px;
     line-height: 32px;
@@ -74,6 +45,6 @@
     height: 80px;
     padding: 0;
     margin: 0;
-    position: absolute;
+    position: fixed;
     font-family: 'Sacramento', cursive;
 }
