--- a/recipe/src/components/Image.css
+++ b/recipe/src/components/Image.css
@@ -1,7 +1,9 @@
-.picture {
-    display:block;
+/* .picture {
+    display:flex;
     position: relative;
     top: 0;
     bottom: 0;
-    margin: auto;
+    width: 100%;
+    height: 100%;
+     */
 }
