--- a/recipe/src/components/recipeContainer.css
+++ b/recipe/src/components/recipeContainer.css
@@ -6,7 +6,7 @@
     padding: 15px 15px 15px 15px;
     border: 20px 20px 20px 20px;
     justify-content: space-between;
-    align-content: space-between;
+    align-content: space-around;
 
 
 }
